RESOLVED FIXED49499
broken-ideographic-font.html fails in release builds
https://bugs.webkit.org/show_bug.cgi?id=49499
Summary broken-ideographic-font.html fails in release builds
Dave Hyatt
Reported 2010-11-13 15:14:59 PST
broken-ideographic-font.html fails in release builds
Attachments
Patch (5.18 KB, patch)
2010-11-13 15:21 PST, Dave Hyatt
mitz: review+
Clean up small caps even more and remove the change that Dan noticed was irrelevant. (12.90 KB, patch)
2010-11-13 15:40 PST, Dave Hyatt
mitz: review+
Dave Hyatt
Comment 1 2010-11-13 15:21:09 PST
mitz
Comment 2 2010-11-13 15:27:28 PST
Comment on attachment 73832 [details] Patch View in context: https://bugs.webkit.org/attachment.cgi?id=73832&action=review > WebCore/platform/graphics/mac/SimpleFontDataCoreText.cpp:44 > - unsigned key = typesettingFeatures + 1; > + unsigned key = 1 + ((typesettingFeatures | (orientation() == Vertical ? 4 : 0)) << 1); I don’t like this part of the change. orientation() is always the same for a SimpleFontData instance, so there’s never a need to include it in the key.
Dave Hyatt
Comment 3 2010-11-13 15:40:56 PST
Created attachment 73835 [details] Clean up small caps even more and remove the change that Dan noticed was irrelevant.
mitz
Comment 4 2010-11-13 15:59:41 PST
Comment on attachment 73835 [details] Clean up small caps even more and remove the change that Dan noticed was irrelevant. View in context: https://bugs.webkit.org/attachment.cgi?id=73835&action=review > WebCore/ChangeLog:16 > + I made sure that the hash for m_CFStringAttributes includes orientation. I don't think this is a bug > + in practice, but this way the code is future-proofed. No longer part of the change.
Dave Hyatt
Comment 5 2010-11-13 20:04:38 PST
Fixed in r71975.
Note You need to log in before you can comment on or make changes to this bug.