https://bugs.webkit.org/show_bug.cgi?id=49499

Reviewed by Dan Bernstein.

broken-ideographic-font.html causes layout test flakiness in release builds.  The reason for this is
that the custom font data for m_brokenIdeographFontData was never getting pruned out of the tree.
The same problem exists for custom small caps fonts, so I made sure that the small caps fonts get
pruned as well.  In addition, custom small caps fonts were never getting deleted either.

I also made allowsLigatures in FontPlatformData orientation-independent, and the callers check it
instead.

Unskip fast/blockflow/broken-ideographic-font.html

* platform/graphics/SimpleFontData.cpp:
(WebCore::SimpleFontData::~SimpleFontData):
* platform/graphics/chromium/SimpleFontDataChromiumWin.cpp:
(WebCore::SimpleFontData::platformDestroy):
(WebCore::SimpleFontData::smallCapsFontData):
* platform/graphics/chromium/SimpleFontDataLinux.cpp:
(WebCore::SimpleFontData::platformDestroy):
(WebCore::SimpleFontData::smallCapsFontData):
* platform/graphics/cocoa/FontPlatformDataCocoa.mm:
(WebCore::FontPlatformData::allowsLigatures):
* platform/graphics/freetype/SimpleFontDataFreeType.cpp:
(WebCore::SimpleFontData::platformDestroy):
(WebCore::SimpleFontData::smallCapsFontData):
* platform/graphics/haiku/SimpleFontDataHaiku.cpp:
(WebCore::SimpleFontData::platformDestroy):
(WebCore::SimpleFontData::smallCapsFontData):
* platform/graphics/mac/ComplexTextControllerATSUI.cpp:
(WebCore::disableLigatures):
* platform/graphics/mac/SimpleFontDataCoreText.cpp:
(WebCore::SimpleFontData::getCFStringAttributes):
* platform/graphics/mac/SimpleFontDataMac.mm:
(WebCore::SimpleFontData::platformDestroy):
* platform/graphics/win/SimpleFontDataWin.cpp:
(WebCore::SimpleFontData::platformDestroy):
(WebCore::SimpleFontData::smallCapsFontData):
* platform/graphics/wx/SimpleFontDataWx.cpp:
(WebCore::SimpleFontData::platformDestroy):
(WebCore::SimpleFontData::smallCapsFontData):



Canonical link: https://commits.webkit.org/62446@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@71975 268f45cc-cd09-0410-ab3c-d52691b4dbfc