WebCore/platform/graphics/haiku/SimpleFontDataHaiku.cpp
@@ -64,8 +64,6 @@ void SimpleFontData::platformCharWidthInit()
 
 void SimpleFontData::platformDestroy()
 {
-    delete m_smallCapsFontData;
-    m_smallCapsFontData = 0;
 }
 
 SimpleFontData* SimpleFontData::smallCapsFontData(const FontDescription& fontDescription) const
@@ -74,7 +72,7 @@ SimpleFontData* SimpleFontData::smallCapsFontData(const FontDescription& fontDes
         FontDescription desc = FontDescription(fontDescription);
         desc.setSpecifiedSize(0.70f * fontDescription.computedSize());
         FontPlatformData fontPlatformData(desc, desc.family().family());
-        m_smallCapsFontData = new SimpleFontData(fontPlatformData);
+        m_smallCapsFontData = new SimpleFontData(fontPlatformData, isCustomFont(), false);
     }
     return m_smallCapsFontData;
 }
