WebCore/platform/graphics/wx/SimpleFontDataWx.cpp
@@ -79,9 +79,6 @@ void SimpleFontData::platformCharWidthInit()
 
 void SimpleFontData::platformDestroy()
 {
-    delete m_smallCapsFontData;
-    m_smallCapsFontData = 0;
-    
 #if OS(WINDOWS)
     if (m_scriptFontProperties) {
         delete m_scriptFontProperties;
@@ -99,7 +96,7 @@ SimpleFontData* SimpleFontData::smallCapsFontData(const FontDescription& fontDes
         FontDescription desc = FontDescription(fontDescription);
         desc.setSpecifiedSize(0.70f * fontDescription.computedSize());
         FontPlatformData platformData(desc, desc.family().family());
-        m_smallCapsFontData = new SimpleFontData(platformData);
+        m_smallCapsFontData = new SimpleFontData(platformData, isCustomFont(), false);
     }
     return m_smallCapsFontData;
 }
